remove unused libs